--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -16,7 +17,9 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
